--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,213 @@
-/* styles.css für Mensch ärgere dich nicht */
-*{
-    font-family: Helvetica, Arial, sans-serif;
+/*
+Stylesheet for the studyproject "Mensch ärgere dich nicht"
+*/
+
+/* --- Colors ---
+
+weiß: #fff;
+schwarz: #000;
+rot: #FF0000
+*/
+
+/* --- Überschriften ---
+h1 -> 
+h2 -> 
+h3 -> 
+h4 -> 
+h5 -> 
+h6 -> 
+
+*/
+
+/*********************************************************************************************************************
+------------------------------------------------------ Allgemein -----------------------------------------------------
+*********************************************************************************************************************/
+
+*,
+*::before,
+*::after {
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
 }
 
-h1{
+body,
+html {
+    height: 100%;
+    scroll-behavior: smooth;
+}
+
+body {
+    font-family: Helvetica Neue, Century Gothic, Arial, sans-serif;
+    font-size: 16px;
+    margin: 0;
+}
+
+.clear {
+    clear: both;
+}
+
+p {
+    line-height: 1.8em;
+}
+
+a {
+    text-decoration: none;
+    color: black;
+    transition: color 300ms;
+}
+
+a:hover {
+    transition: color 300ms;
+}
+
+img {
+    vertical-align: middle;
+}
+
+h1 {
+    font-size: 2.2em;
+    text-align: center;
+    font-weight: 700;
+    color: black;
+}
+
+h2 {
+    font-size: 2em;
+    font-weight: 400;
+    color: black;
+    text-align: center;
+    margin: 1em 0;
+    line-height: normal;
     text-transform: uppercase;
+}
+
+h3 {
+    font-size: 1.6em;
+    text-align: center;
+    font-weight: 300;
+    top: 2em;
+}
+
+h4 {
+    font-size: 1.3em;
+    margin-bottom: 0;
+    margin-top: .4em;
+}
+
+h5 {
+    font-size: 2em;
+    margin-top: .5em;
+    margin-bottom: 0;
+}
+
+h5,
+h6 {
+    text-align: center;
+}
+
+h6 {
+    font-size: 1.2em;
+    font-weight: 400;
+    margin-top: .5em;
+    margin-bottom: 1em;
+}
+
+/*-------------------------------------------*/
+
+#wrapper {
+    display: flex;
+    height: 100%;
+}
+
+#game {
+    width: 70%;
+    display: flex;
+    margin: 0 auto;
+    align-items: center;
+}
+
+#fieldsection {
+    width: 80%;
+}
+
+#fieldsection img {
+    width: 100%;
+    border: 5px solid black;
+}
+
+#preferences {
+    width: 28%;
+    border: 5px solid black;
+    margin-left: 2%;
+    padding: 1.5em;
+}
+
+#newGame {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 2em;
+}
+
+#newGame select {
+    width: 60%;
+    margin: .7em 0em;
+    border: 2px solid black;
+}
+
+#newGame select:hover {
+    background: black;
+    color: white;
+}
+
+#newGame label {
+    width: 100%;
+    margin: .7em 0em;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+#newGame label input {
+    margin-right: 3%;
+}
+
+#newGame button {
+    width: 60%;
+    height: 3.5em;
+    margin: .7em 0em;
+    background: white;
+    border: 3px solid black;
+    font-weight: 900;
+}
+
+#newGame button:hover {
+    color: red;
+    background: black;
+    cursor: pointer;
+}
+
+#gameActions {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 2em;
+}
+
+#gameActions button {
+    width: 100%;
+    height: 2em;
+    margin: .5em 0em;
+    background: white;
+    border: 5px solid black;
+    font-weight: 900;
+    justify-content: center;
+    font-size: 2em;
+}
+
+#gameActions button:hover {
+    color: red;
+    background: black;
+    cursor: pointer;
 }
